Removed hard coded symbol cap of 5 Symbol can now be theorically unlimited. FlowGame file constructor is still limited to 9 due to value field.